--- a/index.html
+++ b/index.html
@@ -6,10 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="">
+    <style>
+        div { 
+            background-color: aqua;
+            width: 600px;
+            text-align: center;
+            margin-left: 250px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+
+        }
+    </style>
     <title>Projeto Redes Sociais</title>
 
 </head>
 <body>
-    <h1>Olá Mundo!!!</h1>
+    <div>
+        <h1>Projeto Redes Sociais</h1>
+        
+    </div>
+    
 </body>
 </html>
