--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 <body>
     <div>
         <h1>Projeto Redes Sociais</h1>
-        
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt vitae ipsa esse, temporibus dolorum adipisci veniam dicta quas repellat tenetur deserunt illo repellendus eum placeat nemo provident reprehenderit voluptate similique!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae voluptate alias aliquam eos harum laboriosam in distinctio sequi placeat sint illo cum mollitia error expedita, obcaecati amet. Dicta, nostrum sapiente.
+        </p>
     </div>
     
 </body>
