--- a/index.html
+++ b/index.html
@@ -5,28 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="">
-    <style>
-        div { 
-            background-color: aqua;
-            width: 600px;
-            text-align: center;
-            margin-left: 250px;
-            margin-top: 10px;
-            margin-bottom: 10px;
-
-        }
-    </style>
+    <link rel="stylesheet" href="estilos/style.css">
     <title>Projeto Redes Sociais</title>
 
 </head>
 <body>
-    <div>
-        <h1>Projeto Redes Sociais</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt vitae ipsa esse, temporibus dolorum adipisci veniam dicta quas repellat tenetur deserunt illo repellendus eum placeat nemo provident reprehenderit voluptate similique!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae voluptate alias aliquam eos harum laboriosam in distinctio sequi placeat sint illo cum mollitia error expedita, obcaecati amet. Dicta, nostrum sapiente.
-        </p>
-    </div>
+    <main>
+        <section id="telefone">
+
+        </section>
+        <section id="redes-sociais">
+
+        </section>
+
+    </main>
     
 </body>
 </html>
