--- a/instagram.html
+++ b/instagram.html
@@ -10,7 +10,7 @@
 
 
 <body>
-    <img src="imagens/tela-instagram.jpg" alt="GitHub">
+    <img src="imagens/tela-instagram_m.jpeg" alt="Instagram">
     <a href="https://www.instagram.com/jmstefani/" target="_blank">ACESSE</a>
 </body>
 </html>
