--- a/linkedin.html
+++ b/linkedin.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/social.css">
-    <title>GitHub</title>
+    <title>Twitter</title>
 </head>
 
 
 <body>
-    <img src="imagens/tela-github_m.jpg" alt="GitHub">
-    <a href="https://github.com/JMStefani" target="_blank">ACESSE</a>
+    <img src="imagens/tela-linkedin_m.jpg" alt="linkedin">
+    <a href="https://www.linkedin.com/in/mauricio-stefani-6837b09/" target="_blank">ACESSE</a>
 </body>
 </html>
