--- a/youtube.html
+++ b/youtube.html
@@ -10,7 +10,7 @@
 
 
 <body>
-    <img src="imagens/tela-youtube.png" alt="Youtube">
+    <img src="imagens/tela-youtube_m.jpg" alt="Youtube">
     <a href="https://www.cursoemvideo.com/user/cursoemvideo/playlist" target="_blank">ACESSE</a>
 </body>
 </html>
