--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homet</title>
+    <title>Home</title>
 </head>
 <style>
     * {
@@ -14,7 +14,7 @@
     body {
         width: 100vw;
         height: 100vh;
-        background: black url(imagens/tela-home.jpg) no-repeat top center;
+        background: black url(imagens/tela-home_m.jpeg) no-repeat top center;
         background-size: cover;
     }
 </style>
