--- a/twitter.html
+++ b/twitter.html
@@ -10,7 +10,7 @@
 
 
 <body>
-    <img src="imagens/tela-twitter.jpg" alt="GitHub">
+    <img src="imagens/tela-twitter_m.jpeg" alt="Twitter">
     <a href="https://twitter.com/JMStefani" target="_blank">ACESSE</a>
 </body>
 </html>
