--- a/linkedin.html
+++ b/linkedin.html
@@ -10,7 +10,7 @@
 
 
 <body>
-    <img src="imagens/tela-linkedin_m.jpg" alt="linkedin">
+    <img src="imagens/tela-linkedin.jpeg" alt="linkedin">
     <a href="https://www.linkedin.com/in/mauricio-stefani-6837b09/" target="_blank">ACESSE</a>
 </body>
 </html>
